fixes client id
