# internal/api/docs/swagger.json
@@ -4617,7 +4617,7 @@
                 }
             }
         },
-        "/statistics/client-dashboard": {
+        "/statistics/client-dashboard/{client_id}": {
             "get": {
                 "security": [
                     {
@@ -6837,11 +6837,17 @@
                 "average_receipt": {
                     "type": "number"
                 },
+                "balance": {
+                    "type": "number"
+                },
                 "top_transaction": {
                     "type": "number"
                 },
                 "total_purchase_sum": {
                     "type": "number"
+                },
+                "type_of_client": {
+                    "type": "string"
                 },
                 "visit_count": {
                     "type": "integer"
